Fix spacing in menu sidebar

--- a/client/src/menu.css
+++ b/client/src/menu.css
@@ -5,12 +5,14 @@
     cursor: default;
     display: block;
     font-size: 16px;
-    height: 50px;
+    height: 40px;
     justify-content: center;
     width: 100%;
     color: #a8c6fa;
   }
   
+
+
 .active {
     /*background-color: #a8c6fa;*/
     color: white;
@@ -19,10 +21,10 @@
 .menu-option {
     display: block;
 }
-
+/*
 .mb {
     display: inline;
-}
+}*/
 
 .menu {
     position: fixed;
@@ -37,6 +39,7 @@
     font-family: 'Abril Fatface', cursive;
     font-size: 35px;
     color: #a8c6fa;
+    padding-bottom: 10px;
 }
 
 .menu-logo {
@@ -45,5 +48,6 @@
 
 .menu .menu-subheader {
     color: #a8c6fa;
-    size: 30px;
+    font-size: 16px;
+    padding-bottom: 10px;
 }
